--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.11.0",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "nuxt": "^3.9.3",
+    "nuxt-icon": "^0.6.8",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   }
