--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^2.11.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "nuxt": "^3.9.3",
+    "nuxt-bootstrap-icons": "^1.1.5",
     "nuxt-icon": "^0.6.8",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
