--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.9.3",
     "nuxt-bootstrap-icons": "^1.1.5",
     "nuxt-icon": "^0.6.8",
+    "vitest": "^1.2.2",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   }
